EXTRA_DIST = \
	attrlist.cxx \
	attrlist.hxx \
	content.hxx \
	diagnose.hxx \
	exports.dxp \
	genericfilter.cxx \
	macros.hxx \
	object.hxx \
	OODocumentHandler.cxx \
	OODocumentHandler.hxx \
	ref.hxx \
	ref.inl \
	refernce.hxx \
	types.hxx \
	TypeDetection.xcu \
	WordPerfectImportFilter.cxx \
	WordPerfectImportFilter.hxx \
	WordPerfectImportStream.cxx \
	WordPerfectImportStream.hxx \
	WriterPerfect.uno.xml \
	xmlkywd.cxx \
	xmlkywd.hxx \
	xmltoken.cxx \
	xmltoken.hxx
