EXTRA_DIST = \
	attrlist.cxx \
	attrlist.hxx \
	exports.dxp \
	OODocumentHandler.cxx \
	OODocumentHandler.hxx \
	WordPerfectGraphics.xcu \
	draw_WordPerfect_Graphics.xcu \
	TypeDetection.xcu \
	WordPerfectImportFilter.cxx \
	WordPerfectImportFilter.hxx \
	WordPerfectImportStream.cxx \
	WordPerfectImportStream.hxx \
	WPGImportFilter.cxx \
	WPGImportFilter.hxx \
	WPGImportFilter.uno.xml
	WriterPerfect.uno.xml \
	wpdimp.cxx \
	wpgimp.cxx \
	xmlkywd.cxx \
	xmlkywd.hxx \
	xmltoken.cxx \
	xmltoken.hxx
